--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <title>Boilermaker</title>
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
-  <script src="semantic/dist/semantic.min.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"></link>
   <script defer src="/bundle.js"></script>
 </head>
 
