--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width initial-scale=1.0'>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
   <title>Hollieatron Industries</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"></link>
+  <script src="https://js.stripe.com/v3/"></script>
   <script defer src="/bundle.js"></script>
 </head>
 
